--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,12 @@
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
     <script src="scripts/d3-timeline.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="scripts/controllers/tooltip.js"></script>
+    <script src="scripts/controllers/legend.js"></script>
+       
+    
     <!-- endbuild -->
 </body>
 </html>
